# massa-rust-sc-examples

./: Cargo.toml  Makefile.toml  README.md
deploy_sc/: Cargo.toml  Makefile.toml
deploy_sc/src/: lib.rs
echo/: Cargo.toml
echo/src/: lib.rs
generate_event/: Cargo.toml
generate_event/src/: lib.rs
test_enum/: Cargo.toml
test_enum/src/: lib.rs
