[workspace]

members = [
    # keep "deploy_sc" after "generate_event" as the latter embeds the former's binary
    "deploy_sc",
    # "echo",
    "generate_event",
]

[profile.release]
lto = true
opt-level = "z"
strip = true
#debug = true
#strip = "debuginfo"
#strip = true

[profile.dev]
lto = true
opt-level = "z"
strip = true
