[package]
name = "massa-rust-sc-deploy_sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
massa_rust_sc_sdk = { path = "../../massa-rust-sc-sdk" }

[build-dependencies]
prost-build = "0.11.8" # specify exact version to ensure determinism
glob = "0.3.1"

[features]
prost-build = []

[profile.release]
lto = true
opt-level = "z"
strip = true
#debug = true
#strip = "debuginfo"
#strip = true

[profile.dev]
lto = true
opt-level = "z"
strip = true
