[package]
name = "massa_rust_sc_generate_event"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
massa_rust_sc_sdk = { path = "../../massa-rust-sc-sdk" }

[profile.release]
lto = true
opt-level = "z"
strip = true
#debug = true
#strip = "debuginfo"
#strip = true

[profile.dev]
lto = true
opt-level = "z"
strip = true
